Implementacion del ver favoritos y eliminar cuenta

--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -197,3 +197,28 @@ button[type="submit"]:hover {
   margin-top: 1.5rem !important;
   margin-bottom: 4rem !important;
 }
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal-content {
+  background: white;
+  padding: 20px;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.modal-content button {
+  margin: 10px;
+  padding: 10px 20px;
+}
